thingi10k now allows input from user-provided stl directory

--- a/notebooks/stl_vae.ipynb
+++ b/notebooks/stl_vae.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,16 +48,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "7956"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,24 +69,24 @@
     "from data import THINGI10K_INDEX\n",
     "from data.stl import save_vectors_as_stl\n",
     "\n",
-    "thingi = Thingi10k.init10()\n",
+    "thingi = Thingi10k.init10k(pctile=.8)\n",
     "n_samples = len(thingi)\n",
     "n_samples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n_samples: 10\n",
-      "n_input: 276048\n",
-      "size: 110419200 bytes\n",
-      "size: 0.10 gb\n"
+      "n_samples: 7956\n",
+      "n_input: 644490\n",
+      "size: 257796000 bytes\n",
+      "size: 0.24 gb\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,173 +338,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jcworkma/jack/3d-form/.3d-form/lib/python3.5/site-packages/tensorflow/python/client/session.py:1702: UserWarning: An interactive session is already active. This can cause out-of-memory errors in some cases. You must explicitly call `InteractiveSession.close()` to release resources held by the other session(s).\n",
+      "  warnings.warn('An interactive session is already active. This can '\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch: 0, Batch: 0\n",
-      "Epoch: 0001 cost= 191361.328125000\n",
+      "Epoch: 0, Batch: 1\n",
+      "Epoch: 0, Batch: 2\n",
+      "Epoch: 0, Batch: 3\n",
+      "Epoch: 0, Batch: 4\n",
+      "Epoch: 0, Batch: 5\n",
+      "Epoch: 0, Batch: 6\n",
+      "Epoch: 0, Batch: 7\n",
+      "Epoch: 0, Batch: 8\n",
+      "Epoch: 0, Batch: 9\n",
+      "Epoch: 0, Batch: 10\n",
+      "Epoch: 0, Batch: 11\n",
+      "Epoch: 0, Batch: 12\n",
+      "Epoch: 0, Batch: 13\n",
+      "Epoch: 0, Batch: 14\n",
+      "Epoch: 0, Batch: 15\n",
+      "Epoch: 0, Batch: 16\n",
+      "Epoch: 0, Batch: 17\n",
+      "Epoch: 0, Batch: 18\n",
+      "Epoch: 0, Batch: 19\n",
+      "Epoch: 0, Batch: 20\n",
+      "Epoch: 0, Batch: 21\n",
+      "Epoch: 0, Batch: 22\n",
+      "Epoch: 0, Batch: 23\n",
+      "Epoch: 0, Batch: 24\n",
+      "Epoch: 0, Batch: 25\n",
+      "Epoch: 0, Batch: 26\n",
+      "Epoch: 0, Batch: 27\n",
+      "Epoch: 0, Batch: 28\n",
+      "Epoch: 0, Batch: 29\n",
+      "Epoch: 0, Batch: 30\n",
+      "Epoch: 0, Batch: 31\n",
+      "Epoch: 0, Batch: 32\n",
+      "Epoch: 0, Batch: 33\n",
+      "Epoch: 0, Batch: 34\n",
+      "Epoch: 0, Batch: 35\n",
+      "Epoch: 0, Batch: 36\n",
+      "Epoch: 0, Batch: 37\n",
+      "Epoch: 0, Batch: 38\n",
+      "Epoch: 0001 cost= 151662.307338801\n",
       "Epoch: 1, Batch: 0\n",
-      "Epoch: 0002 cost= 195148.421875000\n",
+      "Epoch: 1, Batch: 1\n",
+      "Epoch: 1, Batch: 2\n",
+      "Epoch: 1, Batch: 3\n",
+      "Epoch: 1, Batch: 4\n",
+      "Epoch: 1, Batch: 5\n",
+      "Epoch: 1, Batch: 6\n",
+      "Epoch: 1, Batch: 7\n",
+      "Epoch: 1, Batch: 8\n",
+      "Epoch: 1, Batch: 9\n",
+      "Epoch: 1, Batch: 10\n",
+      "Epoch: 1, Batch: 11\n",
+      "Epoch: 1, Batch: 12\n",
+      "Epoch: 1, Batch: 13\n",
+      "Epoch: 1, Batch: 14\n",
+      "Epoch: 1, Batch: 15\n",
+      "Epoch: 1, Batch: 16\n",
+      "Epoch: 1, Batch: 17\n",
+      "Epoch: 1, Batch: 18\n",
+      "Epoch: 1, Batch: 19\n",
+      "Epoch: 1, Batch: 20\n",
+      "Epoch: 1, Batch: 21\n",
+      "Epoch: 1, Batch: 22\n",
+      "Epoch: 1, Batch: 23\n",
+      "Epoch: 1, Batch: 24\n",
+      "Epoch: 1, Batch: 25\n",
+      "Epoch: 1, Batch: 26\n",
+      "Epoch: 1, Batch: 27\n",
+      "Epoch: 1, Batch: 28\n",
+      "Epoch: 1, Batch: 29\n",
+      "Epoch: 1, Batch: 30\n",
+      "Epoch: 1, Batch: 31\n",
+      "Epoch: 1, Batch: 32\n",
+      "Epoch: 1, Batch: 33\n",
+      "Epoch: 1, Batch: 34\n",
+      "Epoch: 1, Batch: 35\n",
+      "Epoch: 1, Batch: 36\n",
+      "Epoch: 1, Batch: 37\n",
+      "Epoch: 1, Batch: 38\n",
+      "Epoch: 0002 cost= 110571.604567308\n",
       "Epoch: 2, Batch: 0\n",
-      "Epoch: 0003 cost= 190908.328125000\n",
+      "Epoch: 2, Batch: 1\n",
+      "Epoch: 2, Batch: 2\n",
+      "Epoch: 2, Batch: 3\n",
+      "Epoch: 2, Batch: 4\n",
+      "Epoch: 2, Batch: 5\n",
+      "Epoch: 2, Batch: 6\n",
+      "Epoch: 2, Batch: 7\n",
+      "Epoch: 2, Batch: 8\n",
+      "Epoch: 2, Batch: 9\n",
+      "Epoch: 2, Batch: 10\n",
+      "Epoch: 2, Batch: 11\n",
+      "Epoch: 2, Batch: 12\n",
+      "Epoch: 2, Batch: 13\n",
+      "Epoch: 2, Batch: 14\n",
+      "Epoch: 2, Batch: 15\n",
+      "Epoch: 2, Batch: 16\n",
+      "Epoch: 2, Batch: 17\n",
+      "Epoch: 2, Batch: 18\n",
+      "Epoch: 2, Batch: 19\n",
+      "Epoch: 2, Batch: 20\n",
+      "Epoch: 2, Batch: 21\n",
+      "Epoch: 2, Batch: 22\n",
+      "Epoch: 2, Batch: 23\n",
+      "Epoch: 2, Batch: 24\n",
+      "Epoch: 2, Batch: 25\n",
+      "Epoch: 2, Batch: 26\n",
+      "Epoch: 2, Batch: 27\n",
+      "Epoch: 2, Batch: 28\n",
+      "Epoch: 2, Batch: 29\n",
+      "Epoch: 2, Batch: 30\n",
+      "Epoch: 2, Batch: 31\n",
+      "Epoch: 2, Batch: 32\n",
+      "Epoch: 2, Batch: 33\n",
+      "Epoch: 2, Batch: 34\n",
+      "Epoch: 2, Batch: 35\n",
+      "Epoch: 2, Batch: 36\n",
+      "Epoch: 2, Batch: 37\n",
+      "Epoch: 2, Batch: 38\n",
+      "Epoch: 0003 cost= 110092.224421820\n",
       "Epoch: 3, Batch: 0\n",
-      "Epoch: 0004 cost= 188649.593750000\n",
+      "Epoch: 3, Batch: 1\n",
+      "Epoch: 3, Batch: 2\n",
+      "Epoch: 3, Batch: 3\n",
+      "Epoch: 3, Batch: 4\n",
+      "Epoch: 3, Batch: 5\n",
+      "Epoch: 3, Batch: 6\n",
+      "Epoch: 3, Batch: 7\n",
+      "Epoch: 3, Batch: 8\n",
+      "Epoch: 3, Batch: 9\n",
+      "Epoch: 3, Batch: 10\n",
+      "Epoch: 3, Batch: 11\n",
+      "Epoch: 3, Batch: 12\n",
+      "Epoch: 3, Batch: 13\n",
+      "Epoch: 3, Batch: 14\n",
+      "Epoch: 3, Batch: 15\n",
+      "Epoch: 3, Batch: 16\n",
+      "Epoch: 3, Batch: 17\n",
+      "Epoch: 3, Batch: 18\n",
+      "Epoch: 3, Batch: 19\n",
+      "Epoch: 3, Batch: 20\n",
+      "Epoch: 3, Batch: 21\n",
+      "Epoch: 3, Batch: 22\n",
+      "Epoch: 3, Batch: 23\n",
+      "Epoch: 3, Batch: 24\n",
+      "Epoch: 3, Batch: 25\n",
+      "Epoch: 3, Batch: 26\n",
+      "Epoch: 3, Batch: 27\n",
+      "Epoch: 3, Batch: 28\n",
+      "Epoch: 3, Batch: 29\n",
+      "Epoch: 3, Batch: 30\n",
+      "Epoch: 3, Batch: 31\n",
+      "Epoch: 3, Batch: 32\n",
+      "Epoch: 3, Batch: 33\n",
+      "Epoch: 3, Batch: 34\n",
+      "Epoch: 3, Batch: 35\n",
+      "Epoch: 3, Batch: 36\n",
+      "Epoch: 3, Batch: 37\n",
+      "Epoch: 3, Batch: 38\n",
+      "Epoch: 0004 cost= 109983.990463172\n",
       "Epoch: 4, Batch: 0\n",
-      "Epoch: 0005 cost= 187531.656250000\n",
-      "Epoch: 5, Batch: 0\n",
-      "Epoch: 0006 cost= 187421.781250000\n",
-      "Epoch: 6, Batch: 0\n",
-      "Epoch: 0007 cost= 188073.281250000\n",
-      "Epoch: 7, Batch: 0\n",
-      "Epoch: 0008 cost= 187698.671875000\n",
-      "Epoch: 8, Batch: 0\n",
-      "Epoch: 0009 cost= 187773.125000000\n",
-      "Epoch: 9, Batch: 0\n",
-      "Epoch: 0010 cost= 187873.156250000\n",
-      "Epoch: 10, Batch: 0\n",
-      "Epoch: 0011 cost= 187892.125000000\n",
-      "Epoch: 11, Batch: 0\n",
-      "Epoch: 0012 cost= 187682.171875000\n",
-      "Epoch: 12, Batch: 0\n",
-      "Epoch: 0013 cost= 187295.156250000\n",
-      "Epoch: 13, Batch: 0\n",
-      "Epoch: 0014 cost= 187471.031250000\n",
-      "Epoch: 14, Batch: 0\n",
-      "Epoch: 0015 cost= 187618.765625000\n",
-      "Epoch: 15, Batch: 0\n",
-      "Epoch: 0016 cost= 187708.031250000\n",
-      "Epoch: 16, Batch: 0\n",
-      "Epoch: 0017 cost= 187574.843750000\n",
-      "Epoch: 17, Batch: 0\n",
-      "Epoch: 0018 cost= 187385.078125000\n",
-      "Epoch: 18, Batch: 0\n",
-      "Epoch: 0019 cost= 187444.218750000\n",
-      "Epoch: 19, Batch: 0\n",
-      "Epoch: 0020 cost= 187529.562500000\n",
-      "Epoch: 20, Batch: 0\n",
-      "Epoch: 0021 cost= 187355.515625000\n",
-      "Epoch: 21, Batch: 0\n",
-      "Epoch: 0022 cost= 187233.968750000\n",
-      "Epoch: 22, Batch: 0\n",
-      "Epoch: 0023 cost= 187469.359375000\n",
-      "Epoch: 23, Batch: 0\n",
-      "Epoch: 0024 cost= 187162.218750000\n",
-      "Epoch: 24, Batch: 0\n",
-      "Epoch: 0025 cost= 186953.218750000\n",
-      "Epoch: 25, Batch: 0\n",
-      "Epoch: 0026 cost= 187688.453125000\n",
-      "Epoch: 26, Batch: 0\n",
-      "Epoch: 0027 cost= 186895.000000000\n",
-      "Epoch: 27, Batch: 0\n",
-      "Epoch: 0028 cost= 188608.500000000\n",
-      "Epoch: 28, Batch: 0\n",
-      "Epoch: 0029 cost= 187495.281250000\n",
-      "Epoch: 29, Batch: 0\n",
-      "Epoch: 0030 cost= 187457.718750000\n",
-      "Epoch: 30, Batch: 0\n",
-      "Epoch: 0031 cost= 187322.140625000\n",
-      "Epoch: 31, Batch: 0\n",
-      "Epoch: 0032 cost= 187274.750000000\n",
-      "Epoch: 32, Batch: 0\n",
-      "Epoch: 0033 cost= 187088.937500000\n",
-      "Epoch: 33, Batch: 0\n",
-      "Epoch: 0034 cost= 187375.093750000\n",
-      "Epoch: 34, Batch: 0\n",
-      "Epoch: 0035 cost= 187352.031250000\n",
-      "Epoch: 35, Batch: 0\n",
-      "Epoch: 0036 cost= 187370.281250000\n",
-      "Epoch: 36, Batch: 0\n",
-      "Epoch: 0037 cost= 187076.156250000\n",
-      "Epoch: 37, Batch: 0\n",
-      "Epoch: 0038 cost= 187489.765625000\n",
-      "Epoch: 38, Batch: 0\n",
-      "Epoch: 0039 cost= 187284.375000000\n",
-      "Epoch: 39, Batch: 0\n",
-      "Epoch: 0040 cost= 187581.296875000\n",
-      "Epoch: 40, Batch: 0\n",
-      "Epoch: 0041 cost= 187525.921875000\n",
-      "Epoch: 41, Batch: 0\n",
-      "Epoch: 0042 cost= 187221.031250000\n",
-      "Epoch: 42, Batch: 0\n",
-      "Epoch: 0043 cost= 187448.968750000\n",
-      "Epoch: 43, Batch: 0\n",
-      "Epoch: 0044 cost= 187392.859375000\n",
-      "Epoch: 44, Batch: 0\n",
-      "Epoch: 0045 cost= 187374.109375000\n",
-      "Epoch: 45, Batch: 0\n",
-      "Epoch: 0046 cost= 187249.546875000\n",
-      "Epoch: 46, Batch: 0\n",
-      "Epoch: 0047 cost= 187281.703125000\n",
-      "Epoch: 47, Batch: 0\n",
-      "Epoch: 0048 cost= 187303.468750000\n",
-      "Epoch: 48, Batch: 0\n",
-      "Epoch: 0049 cost= 187183.343750000\n",
-      "Epoch: 49, Batch: 0\n",
-      "Epoch: 0050 cost= 187327.859375000\n",
-      "Epoch: 50, Batch: 0\n",
-      "Epoch: 0051 cost= 187209.203125000\n",
-      "Epoch: 51, Batch: 0\n",
-      "Epoch: 0052 cost= 187436.343750000\n",
-      "Epoch: 52, Batch: 0\n",
-      "Epoch: 0053 cost= 187235.593750000\n",
-      "Epoch: 53, Batch: 0\n",
-      "Epoch: 0054 cost= 187619.843750000\n",
-      "Epoch: 54, Batch: 0\n",
-      "Epoch: 0055 cost= 187206.500000000\n",
-      "Epoch: 55, Batch: 0\n",
-      "Epoch: 0056 cost= 187189.421875000\n",
-      "Epoch: 56, Batch: 0\n",
-      "Epoch: 0057 cost= 187222.843750000\n",
-      "Epoch: 57, Batch: 0\n",
-      "Epoch: 0058 cost= 187252.468750000\n",
-      "Epoch: 58, Batch: 0\n",
-      "Epoch: 0059 cost= 187290.656250000\n",
-      "Epoch: 59, Batch: 0\n",
-      "Epoch: 0060 cost= 187387.171875000\n",
-      "Epoch: 60, Batch: 0\n",
-      "Epoch: 0061 cost= 187334.468750000\n",
-      "Epoch: 61, Batch: 0\n",
-      "Epoch: 0062 cost= 187397.250000000\n",
-      "Epoch: 62, Batch: 0\n",
-      "Epoch: 0063 cost= 187239.343750000\n",
-      "Epoch: 63, Batch: 0\n",
-      "Epoch: 0064 cost= 187329.343750000\n",
-      "Epoch: 64, Batch: 0\n",
-      "Epoch: 0065 cost= 187215.125000000\n",
-      "Epoch: 65, Batch: 0\n",
-      "Epoch: 0066 cost= 187172.468750000\n",
-      "Epoch: 66, Batch: 0\n",
-      "Epoch: 0067 cost= 187282.031250000\n",
-      "Epoch: 67, Batch: 0\n",
-      "Epoch: 0068 cost= 187307.484375000\n",
-      "Epoch: 68, Batch: 0\n",
-      "Epoch: 0069 cost= 187238.750000000\n",
-      "Epoch: 69, Batch: 0\n",
-      "Epoch: 0070 cost= 187200.515625000\n",
-      "Epoch: 70, Batch: 0\n",
-      "Epoch: 0071 cost= 187185.984375000\n",
-      "Epoch: 71, Batch: 0\n",
-      "Epoch: 0072 cost= 187233.843750000\n",
-      "Epoch: 72, Batch: 0\n",
-      "Epoch: 0073 cost= 187340.421875000\n",
-      "Epoch: 73, Batch: 0\n",
-      "Epoch: 0074 cost= 187234.921875000\n",
-      "Epoch: 74, Batch: 0\n",
-      "Epoch: 0075 cost= 187465.031250000\n",
-      "Epoch: 75, Batch: 0\n",
-      "Epoch: 0076 cost= 187300.625000000\n",
-      "Epoch: 76, Batch: 0\n",
-      "Epoch: 0077 cost= 187318.171875000\n",
-      "Epoch: 77, Batch: 0\n",
-      "Epoch: 0078 cost= 187167.578125000\n",
-      "Epoch: 78, Batch: 0\n",
-      "Epoch: 0079 cost= 187267.625000000\n",
-      "Epoch: 79, Batch: 0\n",
-      "Epoch: 0080 cost= 187154.546875000\n"
+      "Epoch: 4, Batch: 1\n",
+      "Epoch: 4, Batch: 2\n",
+      "Epoch: 4, Batch: 3\n",
+      "Epoch: 4, Batch: 4\n",
+      "Epoch: 4, Batch: 5\n",
+      "Epoch: 4, Batch: 6\n",
+      "Epoch: 4, Batch: 7\n",
+      "Epoch: 4, Batch: 8\n",
+      "Epoch: 4, Batch: 9\n",
+      "Epoch: 4, Batch: 10\n",
+      "Epoch: 4, Batch: 11\n",
+      "Epoch: 4, Batch: 12\n",
+      "Epoch: 4, Batch: 13\n",
+      "Epoch: 4, Batch: 14\n",
+      "Epoch: 4, Batch: 15\n",
+      "Epoch: 4, Batch: 16\n",
+      "Epoch: 4, Batch: 17\n",
+      "Epoch: 4, Batch: 18\n",
+      "Epoch: 4, Batch: 19\n",
+      "Epoch: 4, Batch: 20\n",
+      "Epoch: 4, Batch: 21\n",
+      "Epoch: 4, Batch: 22\n",
+      "Epoch: 4, Batch: 23\n",
+      "Epoch: 4, Batch: 24\n",
+      "Epoch: 4, Batch: 25\n",
+      "Epoch: 4, Batch: 26\n",
+      "Epoch: 4, Batch: 27\n",
+      "Epoch: 4, Batch: 28\n",
+      "Epoch: 4, Batch: 29\n",
+      "Epoch: 4, Batch: 30\n",
+      "Epoch: 4, Batch: 31\n",
+      "Epoch: 4, Batch: 32\n",
+      "Epoch: 4, Batch: 33\n",
+      "Epoch: 4, Batch: 34\n",
+      "Epoch: 4, Batch: 35\n",
+      "Epoch: 4, Batch: 36\n",
+      "Epoch: 4, Batch: 37\n",
+      "Epoch: 4, Batch: 38\n",
+      "Epoch: 0005 cost= 109913.926007102\n"
      ]
     }
    ],
@@ -522,7 +570,7 @@
     "# https://stackoverflow.com/questions/46941747/tensorflow-error-cannot-parse-tensor-from-proto\n",
     "#vae = train(network_architecture, training_epochs=75, batch_size=20)\n",
     "#vae = train(network_architecture, training_epochs=20, batch_size=20)\n",
-    "vae = train(network_architecture, training_epochs=80, batch_size=10, display_step=1)"
+    "vae = train(network_architecture, training_epochs=5, batch_size=200, display_step=1)"
    ]
   },
   {
