moved stl_vae model code to stl_vae.py

--- a/notebooks/stl_vae.ipynb
+++ b/notebooks/stl_vae.ipynb
@@ -467,7 +467,102 @@
       "Epoch: 0, Batch: 77\n",
       "Epoch: 0, Batch: 78\n",
       "Epoch: 0, Batch: 79\n",
-      "Epoch: 0, Batch: 80\n"
+      "Epoch: 0, Batch: 80\n",
+      "Epoch: 0, Batch: 81\n",
+      "Epoch: 0, Batch: 82\n",
+      "Epoch: 0, Batch: 83\n",
+      "Epoch: 0, Batch: 84\n",
+      "Epoch: 0, Batch: 85\n",
+      "Epoch: 0, Batch: 86\n",
+      "Epoch: 0, Batch: 87\n",
+      "Epoch: 0, Batch: 88\n",
+      "Epoch: 0, Batch: 89\n",
+      "Epoch: 0, Batch: 90\n",
+      "Epoch: 0, Batch: 91\n",
+      "Epoch: 0, Batch: 92\n",
+      "Epoch: 0, Batch: 93\n",
+      "Epoch: 0, Batch: 94\n",
+      "Epoch: 0, Batch: 95\n",
+      "Epoch: 0, Batch: 96\n",
+      "Epoch: 0, Batch: 97\n",
+      "Epoch: 0, Batch: 98\n",
+      "Epoch: 0, Batch: 99\n",
+      "Epoch: 0, Batch: 100\n",
+      "Epoch: 0, Batch: 101\n",
+      "Epoch: 0, Batch: 102\n",
+      "Epoch: 0, Batch: 103\n",
+      "Epoch: 0, Batch: 104\n",
+      "Epoch: 0, Batch: 105\n",
+      "Epoch: 0, Batch: 106\n",
+      "Epoch: 0, Batch: 107\n",
+      "Epoch: 0, Batch: 108\n",
+      "Epoch: 0, Batch: 109\n",
+      "Epoch: 0, Batch: 110\n",
+      "Epoch: 0, Batch: 111\n",
+      "Epoch: 0, Batch: 112\n",
+      "Epoch: 0, Batch: 113\n",
+      "Epoch: 0, Batch: 114\n",
+      "Epoch: 0, Batch: 115\n",
+      "Epoch: 0, Batch: 116\n",
+      "Epoch: 0, Batch: 117\n",
+      "Epoch: 0, Batch: 118\n",
+      "Epoch: 0, Batch: 119\n",
+      "Epoch: 0, Batch: 120\n",
+      "Epoch: 0, Batch: 121\n",
+      "Epoch: 0, Batch: 122\n",
+      "Epoch: 0, Batch: 123\n",
+      "Epoch: 0, Batch: 124\n",
+      "Epoch: 0, Batch: 125\n",
+      "Epoch: 0, Batch: 126\n",
+      "Epoch: 0, Batch: 127\n",
+      "Epoch: 0, Batch: 128\n",
+      "Epoch: 0, Batch: 129\n",
+      "Epoch: 0, Batch: 130\n",
+      "Epoch: 0, Batch: 131\n",
+      "Epoch: 0, Batch: 132\n",
+      "Epoch: 0, Batch: 133\n",
+      "Epoch: 0, Batch: 134\n",
+      "Epoch: 0, Batch: 135\n",
+      "Epoch: 0, Batch: 136\n",
+      "Epoch: 0, Batch: 137\n",
+      "Epoch: 0, Batch: 138\n",
+      "Epoch: 0, Batch: 139\n",
+      "Epoch: 0, Batch: 140\n",
+      "Epoch: 0, Batch: 141\n",
+      "Epoch: 0, Batch: 142\n",
+      "Epoch: 0, Batch: 143\n",
+      "Epoch: 0, Batch: 144\n",
+      "Epoch: 0, Batch: 145\n",
+      "Epoch: 0, Batch: 146\n",
+      "Epoch: 0, Batch: 147\n",
+      "Epoch: 0, Batch: 148\n",
+      "Epoch: 0, Batch: 149\n",
+      "Epoch: 0, Batch: 150\n",
+      "Epoch: 0, Batch: 151\n",
+      "Epoch: 0, Batch: 152\n",
+      "Epoch: 0, Batch: 153\n",
+      "Epoch: 0, Batch: 154\n",
+      "Epoch: 0, Batch: 155\n",
+      "Epoch: 0, Batch: 156\n",
+      "Epoch: 0, Batch: 157\n",
+      "Epoch: 0, Batch: 158\n",
+      "Epoch: 0, Batch: 159\n",
+      "Epoch: 0, Batch: 160\n",
+      "Epoch: 0, Batch: 161\n",
+      "Epoch: 0, Batch: 162\n",
+      "Epoch: 0, Batch: 163\n",
+      "Epoch: 0, Batch: 164\n",
+      "Epoch: 0, Batch: 165\n",
+      "Epoch: 0, Batch: 166\n",
+      "Epoch: 0, Batch: 167\n",
+      "Epoch: 0, Batch: 168\n",
+      "Epoch: 0, Batch: 169\n",
+      "Epoch: 0, Batch: 170\n",
+      "Epoch: 0, Batch: 171\n",
+      "Epoch: 0, Batch: 172\n",
+      "Epoch: 0, Batch: 173\n",
+      "Epoch: 0, Batch: 174\n",
+      "Epoch: 0, Batch: 175\n"
      ]
     }
    ],
